# drf-tutorial

./: conda-lock.yml  environment.yml  pyproject.toml
drf_tutorial/: asgi.py  settings.py  urls.py
drf_tutorial/quickstart/: views.py
snippets/: models.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py
tutorial/: settings.py  urls.py
