[tool.poetry]
name = "drf-tutorial"
version = "0.1.0"
description = "Working through https://www.django-rest-framework.org/tutorial/quickstart/ ..."
authors = ["Rowan Molony <rowan.molony@mainstreamrp.com>"]
packages = [{include = "drf_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
pygments = "^2.14.0"
drf-yasg = "^1.21.4"


[tool.poetry.group.dev.dependencies]
httpie = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
