[tool.poetry]
name = "drf-tutorial"
version = "0.1.0"
description = "Working through https://www.django-rest-framework.org/tutorial/quickstart/ ..."
authors = ["Rowan Molony <rowan.molony@mainstreamrp.com>"]
readme = "README.md"
packages = [{include = "drf_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
